# bit-backup

./: .bitbackupignore  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENSE  NEXT.md  README.md  add_license_after_includes.sh  header.txt  setmodtime.sh
include/BitBackup/Commands/: CheckCommand.h  HelpCommand.h  VersionCommand.h
include/BitBackup/Core/: BitBackupArgs.h  BitBackupCommand.h  BitBackupContext.h  BitBackupException.h  BitBackupFiles.h  BitBackupIgnoreRegex.h  BitBackupProgram.h  Command.h  ListSet.h  ProgressTracker.h  Utils.h
include/BitBackup/Entity/: FsFile.h  SystemItem.h
include/BitBackup/Files/: FileEntry.h  FileType.h  UnixPermission.h  UnixPermissionType.h  UnixPermissions.h
include/BitBackup/Persistence/Api/: Connection.h  ConnectionFactory.h  FileRepository.h  SystemItemRepository.h
include/BitBackup/Persistence/Impl/Sqlite/: DBMigrationSchemaHistory.h  DBMigrationSchemaHistoryTable.h  FileRepositoryImplSqlite.h  FileTable.h  MigrationResult.h  MigrationType.h  Migrations.h  SqliteConnection.h  SqliteConnectionFactory.h  SqliteDatabaseMigration.h  (+2 more)
src/BitBackup/Commands/: CheckCommand.cpp  HelpCommand.cpp  VersionCommand.cpp
src/BitBackup/Core/: BitBackupArgs.cpp  BitBackupContext.cpp  BitBackupIgnoreRegex.cpp  BitBackupProgram.cpp  Command.cpp  Main.cpp  ProgressTracker.cpp  Utils.cpp
src/BitBackup/Files/: FileEntry.cpp  UnixPermission.cpp  UnixPermissions.cpp
tests/: Test.cpp
tests/BitBackup/Commands/: CheckCommandBitRotTests.cpp  CheckCommandLockTests.cpp
tests/BitBackup/Core/: BitBackupIgnoreRegexTests.cpp  ListSetTests.cpp  ProgressTrackerTests.cpp
tests/BitBackup/Entity/: FsFileTests.cpp
tests/BitBackup/Persistence/: FileRepositoryImplSqliteTests.cpp
(+6 files in other folders)
